--- a/api/.gitignore
+++ b/api/.gitignore
@@ -21,3 +21,12 @@ node_modules/
 .env.development.local
 .env.test.local
 .env.production.local
+
+# PhpStorm
+.idea/*
+
+# VSCode
+.vscode/*
+
+# production
+/dist
