--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-    "private": true,
+    "private": false,
     "name": "@node-auth/api",
     "version": "1.0.0",
     "main": "dist/index.js",
@@ -13,6 +13,13 @@
     "devDependencies": {
         "@types/express": "^4.17.13",
         "@types/node": "^16.3.3",
+        "@typescript-eslint/eslint-plugin": "^4.31.0",
+        "@typescript-eslint/parser": "^4.31.0",
+        "eslint": "^7.32.0",
+        "eslint-config-standard": "^16.0.3",
+        "eslint-plugin-import": "^2.24.2",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^5.1.0",
         "ts-node-dev": "^1.1.8",
         "typescript": "^4.3.5"
     },
