--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -4,6 +4,7 @@
         "es2021": true
     },
     "extends": [
+        "prettier",
         "standard"
     ],
     "parser": "@typescript-eslint/parser",
@@ -12,6 +13,7 @@
         "sourceType": "module"
     },
     "plugins": [
+        "prettier",
         "@typescript-eslint"
     ],
     "rules": {
