--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,8 @@
         "dev": "tsnd --transpile-only src",
         "prebuild": "rm -rf dist",
         "build": "tsc",
-        "start": "NODE_ENV=production node -r source-map-support/register dist/index.js"
+        "start": "NODE_ENV=production node -r source-map-support/register dist/index.js",
+        "lint": "eslint --fix src/**/*.{js,jsx,ts,tsx}"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
@@ -16,10 +17,13 @@
         "@typescript-eslint/eslint-plugin": "^4.31.0",
         "@typescript-eslint/parser": "^4.31.0",
         "eslint": "^7.32.0",
+        "eslint-config-prettier": "^8.3.0",
         "eslint-config-standard": "^16.0.3",
         "eslint-plugin-import": "^2.24.2",
         "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-promise": "^5.1.0",
+        "prettier": "^2.3.2",
         "ts-node-dev": "^1.1.8",
         "typescript": "^4.3.5"
     },
