--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+    "dependencies": {
+        "concurrently": "^6.x"
     },
+    "devDependencies": {},
     "engines": {
         "node": "^14"
+    },
+    "scripts": {
+        "install": "cd server && npm install",
+        "start:prod": "cd server && npm start",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
         "type": "git",
