--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
         "dev": "tsnd --transpile-only src",
         "prebuild": "rm -rf dist",
         "build": "tsc",
-        "start": "NODE_ENV=production node -r source-map-support/register dist/index.js",
+        "start": "NODE_ENV=production node dist/index.js",
         "lint": "eslint --fix src/**/*.{js,jsx,ts,tsx}"
     },
     "devDependencies": {
