--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "scripts": {
         "install": "cd server && npm install",
+        "postinstall": "cd server && npm run build",
         "start:prod": "cd server && npm start",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
